# Trust_Game_Env

./: .gitignore  BLOG_POST.md  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
baselines/: __init__.py  policies.py
eval/: __init__.py  ablations.py  metrics.py  run_eval.py
eval_results/: advanced_eval_results.csv  advanced_eval_summary.json  dataset_summary.json  login.html  results_raw.csv  results_summary.json
eval_results/phase2_eval/: results_raw.csv
eval_results/phase2_eval_random/: results_raw.csv  results_summary.json
eval_results/phase2_eval_scripted/: results_summary.json
server/: Dockerfile  __init__.py  app.py  trust_game_env_environment.py
training/: advanced_train_trl_unsloth_hf_space.ipynb  train_trl_unsloth.ipynb  train_trl_unsloth_hf_space.ipynb
